--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
 <body>
     <div class="grid-container">
         <nav>
-            <h1>Nav Bar</h1>
+            <div class="left">
+                <div class="burger">
+                    <div class="line-1"></div>
+                    <div class="line-2"></div>
+                    <div class="line-3"></div>
+                </div>
+                <img src="./Resources/Images/Youtube-Logo.png" alt="Youtube-Logo" >
+            </div>
+            <div class="search-bar">
+                <input type="text" placeholder="   Ara">
+                <img src="./Resources/Images/Search-Icon.png" alt="Search-Icon" >
+            </div>
+            <div class="right">
+                <img class="video-icon" src="./Resources/Images/Video-Icon.jpg" alt="Video-Icon">
+                <img class="grid-view-icon" src="./Resources/Images/Grid-View-Icon.png" alt="Video-Icon">
+                <img class="settings-icon" src="./Resources/Images/Settings-Icon.png" alt="Search-Icon">
+                <button>
+                    <!-- <img src="./Resources/Images/Profile-Icon.webp" alt="Profile-Icon"> -->
+                    <p>OTURUM AÇ</p>
+                </button>
+            </div>
         </nav>
         <main>
             <h1>Video Display</h1>
