--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </nav>
         <main>
-            <h1>Video Display</h1>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/EFafSYg-PkI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </main>
         <div class="advert">
             <h1>Advert</h1>
