--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </nav>
         <main>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/EFafSYg-PkI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="95%" height="95%" src="https://www.youtube.com/embed/EFafSYg-PkI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </main>
         <div class="advert">
             <h1>Advert</h1>
@@ -40,8 +40,15 @@
         <div class="suggested-videos">
             <h1>Suggested-Videos</h1>
         </div>
-        <div class="video-info">
-            <h1>Video Info</h1>
+        <div class="video-info-container">
+            <div class="video-info">
+                <p>#hashtags #hashtags</p>
+                <h1>Video Title</h1>
+            </div>
+            <div class="video-options">
+                
+            </div>
+            
         </div>
     </div>
 </body>
