--- a/index.html
+++ b/index.html
@@ -42,11 +42,20 @@
         </div>
         <div class="video-info-container">
             <div class="video-info">
-                <p>#hashtags #hashtags</p>
-                <h1>Video Title</h1>
+                <p class="hashtags">#css #webdevelopment</p>
+                <h1 class="title">CSS Gid Tutorial | CSS Grid Crash Course</h1>
+                <p class="view-count">385.412 görüntüleme. 20 Nis 2019</p>
             </div>
             <div class="video-options">
-                
+                    <img src="./Resources/Images/Like-Button.png" alt="Like-Button">
+                    <h2>16B</h2>
+                    <img src="./Resources/Images/Dislike-Button.png" alt="Like-Button">
+                    <h2>198</h2>
+                    <img src="./Resources/Images/Share-Arrow.png" alt="Share-Arrow">
+                    <h2>PAYLAŞ</h2>
+                    <img src="./Resources/Images/Add-To-Playlist.png" alt="Add-To-Playlist">
+                    <h2>KAYDET</h2>
+                    <img src="./Resources/Images/Three-Dots-Horizontal.jpg" alt="Three-Dots-Horizontal">
             </div>
             
         </div>
