--- a/index.html
+++ b/index.html
@@ -38,7 +38,46 @@
             <h1>Advert</h1>
         </div>
         <div class="suggested-videos">
-            <h1>Suggested-Videos</h1>
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="./Resources/Images/Thumbnail.JPG" alt="Thumbnail">
+                </div>
+                <div class="suggested-vid-info">
+                    <h2>CSS Flexbox In 20 Minutes | Learn HTML and CSS | Flexbox...</h2>
+                    <p>Dev Ed</p>
+                    <p>206 B görüntüleme . 1 yıl önce</p>
+                </div>
+            </div>
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="./Resources/Images/Thumbnail.JPG" alt="Thumbnail">
+                </div>
+                <div class="suggested-vid-info">
+                    <h2>CSS Flexbox In 20 Minutes | Learn HTML and CSS | Flexbox...</h2>
+                    <p>Dev Ed</p>
+                    <p>206 B görüntüleme . 1 yıl önce</p>
+                </div>
+            </div>
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="./Resources/Images/Thumbnail.JPG" alt="Thumbnail">
+                </div>
+                <div class="suggested-vid-info">
+                    <h2>CSS Flexbox In 20 Minutes | Learn HTML and CSS | Flexbox...</h2>
+                    <p>Dev Ed</p>
+                    <p>206 B görüntüleme . 1 yıl önce</p>
+                </div>
+            </div>
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="./Resources/Images/Thumbnail.JPG" alt="Thumbnail">
+                </div>
+                <div class="suggested-vid-info">
+                    <h2>CSS Flexbox In 20 Minutes | Learn HTML and CSS | Flexbox...</h2>
+                    <p>Dev Ed</p>
+                    <p>206 B görüntüleme . 1 yıl önce</p>
+                </div>
+            </div> 
         </div>
         <div class="video-info-container">
             <div class="video-info">
