--- a/index.html
+++ b/index.html
@@ -35,7 +35,27 @@
             <iframe width="95%" height="95%" src="https://www.youtube.com/embed/EFafSYg-PkI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </main>
         <div class="advert">
-            <h1>Advert</h1>
+            <div class="text">
+                <img src="./Resources/Images/Information-Icon.jpg" alt="Information-Icon">
+                <h2>Clement Mihailescu</h2>
+                <p>Software Engineering | Entrepreneurship</p>
+                <p>Co-Founder and CEO of AlgoExpert | EX Google EX Facebook</p>
+            </div>
+            <div class="links">
+                <div class="picture">
+                    <img src="./Resources/Images/Stock-Picture-Head-Shot.jpeg" alt="Stock-Picture-Head-Shot">
+                </div>
+                <div class="website">
+                    <h2>AlgoExpert.io</h2>
+                    <div class="url-info">
+                        <button>Reklam</button>
+                        <p>www.algoexpert.io</p>
+                    </div>
+                </div>
+                <div class="learn-more">
+                    <button>LEARN MORE</button>
+                </div>
+            </div>
         </div>
         <div class="suggested-videos">
             <div class="video">
